# transaction-cost-engine

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py
src/api/: main.py
src/api/v1/: router.py  transactions.py
src/core/: config.py
src/core/config/: settings.py
src/core/enums/: cost_method.py  transaction_type.py
src/core/models/: request.py  response.py  transaction.py
src/logic/: cost_basis_strategies.py  cost_calculator.py  cost_objects.py  disposition_engine.py  error_reporter.py  parser.py  sorter.py
src/services/: tem.py  transaction_processor.py
src/tests/integration/: test_api_process_transactions.py
src/tests/unit/: test_cost_calculator.py  test_disposition_engine.py  test_error_reporter.py  test_parser.py  test_sorter.py
