[project]
name = "transaction-cost-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "sgajbi",email = "sandeepgajbi@yahoo.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.3"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{include = "src"}]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["src/tests"]
log_cli = true      # NEW: Enable live logging to console during test run
log_cli_level = "DEBUG" # NEW: Set logging level for console output to DEBUG